Fix the error of image overflow on other browser The problem is simple: I forgot to add '& >' before the img attribute In css file if I don't do that, it will think that is an property That why when i deploy on Firefox, it run perfect but somehow on edge or chrome, the image just flow out the screen. So i fix it, yayy

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ header {
 
   & > .right-div {
     margin-left: 50px;
-    img {
+    & > img {
       max-width: 1000px;
       height: 300px;
       border-radius: 15px;
